--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -3,6 +3,7 @@
     border-radius: 8px;
     padding: 8px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    position: relative;
 }
 .product img{
     width: 100%;
